MA make also section layout for desktops, fix header nav links block appearance on small devices and update catalog and position pages headers and footers

--- a/Maroon/src/blocks/also/also.sass
+++ b/Maroon/src/blocks/also/also.sass
@@ -11,3 +11,7 @@
 
   &__carousel-controls
     margin-right: 4.6875vw
+
+    @media (min-width: $screen-xxl)
+      margin-right: calc(7.174% - 0.25rem)
+      margin-left: calc(7.174% - 0.25rem)
