--- a/Maroon/src/blocks/product/product.sass
+++ b/Maroon/src/blocks/product/product.sass
@@ -6,6 +6,9 @@
   @media (min-width: $screen-md)
     padding: 7.5rem 4.6875% 2.5rem
 
+  @media (min-width: $screen-xxl)
+    padding: 9rem 7.174% 2.5rem
+
   &__img
     width: 100%
     height: auto
